objects/LeasePayment__c.object
<CustomObject>
    <fields>
        <fullName>ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acceptance_Apprvd__c</fullName>
        <label>Acceptance Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acceptance_Rcvd_YN__c</fullName>
        <formula>IF(IsNull( Acceptance_Rcvd__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acceptance Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acceptance_Rcvd__c</fullName>
        <label>Acceptance (Exhibit C) Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>This Was made Master Detail as the LEase Payment was made private to avoid any visibility issues.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lease_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Add_Equipment_Qty__c</fullName>
        <label>Add Equipment Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Addendum_Countersigned__c</fullName>
        <label>Amendment Countersigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Sent__c</fullName>
        <label>Amendment Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Signed__c</fullName>
        <label>Amendment Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Equipment__c</fullName>
        <label>Additional Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aging_Days_CS_PISE__c</fullName>
        <description>counts the no. of days between ntp and pto date;if no pto but with ntp, compare ntp to current date to get the difference</description>
        <formula>IF( ISBLANK( Date_Countersigned__c ),0, IF(ISBLANK( PIS_Entry_Date__c) ,TODAY() -Date_Countersigned__c , PIS_Entry_Date__c-Date_Countersigned__c))</formula>
        <label># Aging Days (CS - PISE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Days_Dlvrd_vs_Install_Inv_Rec__c</fullName>
        <description>monitoring aging days from the date delivered to Install Invoice package receive yet from dealers</description>
        <formula>IF( ISBLANK(Date_Delivered__c),0, IF(ISBLANK(Install_Inv_Rcvd__c) ,TODAY() -Date_Delivered__c, Install_Inv_Rcvd__c-Date_Delivered__c))</formula>
        <label>Aging Days(Dlvrd vs Install Inv Rec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <formula>Text( Agreement__r.echosign_dev1__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipName>Lease_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amendment_Date1__c</fullName>
        <formula>TEXT(Quote__r.Amendment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amendment Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_Date__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_Revision_Lease_Number1__c</fullName>
        <description>Loan Phase 2- REnamed the label to remove LEase</description>
        <label>Amendment/Revision Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_Revision_Lease_Number__c</fullName>
        <label>Amendment/ Revision Lease Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Escalation_Not_Available_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Escalation Not Available Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Escalation_Not_Available__c</fullName>
        <label>Annual Escalation Not Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Escalation__c</fullName>
        <formula>IF(   Not(ISBLANK( Quote__c )), text(Quote__r.Lease_Annual_Escalation__c  * 100  ), text(Annual_Escalation_old__c ))</formula>
        <label>Annual Escalation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Escalation_old__c</fullName>
        <label>Annual Escalation old</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Prod_Report_Yr1__c</fullName>
        <label>Annual Prod Report Yr1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Prod_Report_Yr2__c</fullName>
        <label>Annual Prod Report Yr2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Prod_Report_Yr3__c</fullName>
        <label>Annual Prod Report Yr3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Documents_Remaining__c</fullName>
        <formula>Account__r.Approval_Documents_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Documents Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Documents__c</fullName>
        <formula>HYPERLINK(&quot;/apex/OriginationDocumentUpload?id=&quot; &amp; End_Customer_Account__r.Id &amp; &quot;&amp;type=Approval&quot;, &quot;Approval Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Install_Docs__c</fullName>
        <label>Approved Install Docs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Install_Documents__c</fullName>
        <label>Approved Install Documents</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Interconnect_Docs__c</fullName>
        <label>Approved Interconnect Docs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Interconnect_Documents__c</fullName>
        <label>Approved Interconnect Documents</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Origination_Docs__c</fullName>
        <label>Approved Origination Docs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Origination_Documents__c</fullName>
        <label>Approved Origination Documents</label>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Origination</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Documents__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Documents__c.Lease_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Award_Amount__c</fullName>
        <label>Award Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOS_Cost__c</fullName>
        <label>BOS Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Mon_Pymnt_Yr1__c</fullName>
        <formula>IF((  Base_Mon_Pymnt_Yr1_old__c &gt; 0 ) , Base_Mon_Pymnt_Yr1_old__c, Quote__r.First_Monthly_Payment_Base_Amount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Mon Pymnt Yr1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Mon_Pymnt_Yr1_old__c</fullName>
        <label>Base Mon Pymnt Yr1 old</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Monthly__c</fullName>
        <description>Equaled to Quote field &quot;Final First Base Monthly Pay&quot;</description>
        <formula>Quote__r.Final_First_Base_Monthly_Pay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_PrePaid__c</fullName>
        <formula>Quote__r.Full_PrePayment_Amount_Base_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base PrePaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Template_Sent_to_LD__c</fullName>
        <label>Booking Template Sent to LD?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CG_Valuation_Methodology__c</fullName>
        <description>Cash Grant Calculation Methodology</description>
        <label>CG Valuation Methodology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Pymnt_Posted__c</fullName>
        <label>CM Pymnt Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Pymnt_Reference__c</fullName>
        <label>CM Pymnt Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Pymnt_Rqustd__c</fullName>
        <label>CM Pymnt Rqustd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Pymnt_Submitted__c</fullName>
        <label>CM Pymnt Submitted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_signature_date__c</fullName>
        <label>COA  signature date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPR_Quote_Id__c</fullName>
        <formula>Quote__r.Quote_ID__c  &amp; &quot;|&quot; &amp; TEXT(Quote__r.Scenario_Index__c)</formula>
        <label>CPR Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRAE_Nr__c</fullName>
        <label>CRAE Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Package_Complete__c</fullName>
        <description>Cash Grant Package Complete</description>
        <label>Cash Grant Package Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Citi_Acceptance_Date__c</fullName>
        <label>Citi Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Request_Batch__c</fullName>
        <label>Closing Request Batch</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Request_Date__c</fullName>
        <label>Closing Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Request_Resp__c</fullName>
        <label>Closing Request Resp</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cmpltd_ICF_Apprvd__c</fullName>
        <label>Cmpltd ICF Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cmpltd_ICF_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL(  Cmpltd_ICF_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cmpltd ICF Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cmpltd_ICF_Rcvd__c</fullName>
        <label>Completed ICF Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cmsng_Rpt_Apprvd__c</fullName>
        <label>Cmsng Rpt Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cmsng_Rpt_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL(  Cmsng_Rpt_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cmsng Rpt Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cmsng_Rpt_Rcvd__c</fullName>
        <label>Commissioning Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnfrmd_ICF_Apprvd__c</fullName>
        <label>Cnfrmd ICF Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnfrmd_ICF_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL( Cnfrmd_ICF_Rcvd__c), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnfrmd ICF Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cnfrmd_ICF_Rcvd__c</fullName>
        <label>Confirmed ICF Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnfrmd_Mon_Prvsnd_YN__c</fullName>
        <formula>IF(ISNULL(  Cnfrmd_Mon_Prvsnd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnfrmd Mon Prvsnd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cnfrmd_Mon_Prvsnd__c</fullName>
        <label>Cnfrmd Mon Prvsnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_Approved__c</fullName>
        <label>Commissioning Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status__c</fullName>
        <label>Commissioning Status</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning Appointment Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Appointment Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commisioning Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commissioning_date_planned__c</fullName>
        <label>Commissioning date  planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_request_date_to_ERDF__c</fullName>
        <label>Commissioning request date to ERDF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cond_Fin_LW_Apprvd__c</fullName>
        <label>Cond Fin LW Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cond_Fin_LW_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL(  Cond_Fin_LW_Rcvd__c ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Final LW Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cond_Fin_LW_Rcvd__c</fullName>
        <label>Conditional Final LW Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cond_Prog_LW_Apprvd__c</fullName>
        <label>Cond Prog LW Apprvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cond_Prog_LW_Rcvd_YN__c</fullName>
        <formula>IF(ISNULL( Cond_Prog_LW_Rcvd__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cond Prog LW Rcvd YN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cond_Prog_LW_Rcvd__c</fullName>
        <label>Conditional Progress LW Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cond_Prog_LW_Rcvd_old__c</fullName>
        <label>ConditionalProgressLienWaiverReceivdOld</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conductor_Inspection_Date__c</fullName>
        <label>Conductor Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conductor_Inspection_Status__c</fullName>
        <label>Conductor Inspection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conductor_Inspection__c</fullName>
        <label>Conductor Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consuel_Approved__c</fullName>
        <label>Consuel Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consuel_Certification_Received__c</fullName>
        <label>Consuel Certification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consuel_Certification_Requested__c</fullName>
        <label>Consuel Certification Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consuel_certificate__c</fullName>
        <label>Consuel certificate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lease_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Cancellation_Reason__c</fullName>
        <formula>Text( Agreement__r.Cancellation_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Cancellation Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_customer_signed_date__c</fullName>
        <formula>Agreement__r.echosign_dev1__DateSigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Basis_Amount__c</fullName>
        <description>This field will capture what Accounting have forwarded to Operations for filing and will provide information for Cash grant accrual</description>
        <label>Cost Basis Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <formula>RIGHT(Account__r.Owner.CountryDomainText__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Lease_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox controls whether the lease schedule summary record should be created. It requires the lease payment lookup to a quote record as well.</description>
        <inlineHelpText>This checkbox controls whether the lease schedule summary record should be created. It requires the lease payment lookup to a quote record as well.</inlineHelpText>
        <label>Create Lease Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Date__c</fullName>
        <formula>IF( NOT(ISBLANK( Credit_Check_Date_old__c )) , Credit_Check_Date_old__c, Account__r.Credit_Check_Approval_Date__c    )</formula>
        <label>Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Date_old__c</fullName>
        <label>Credit Check Date old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Status__c</fullName>
        <formula>IF( NOT(ISBLANK((Credit_Check_Status_old__c) )) ,Credit_Check_Status_old__c, TEXT(End_Customer_Account__r.Credit_Check_status__c)   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Status_old__c</fullName>
        <label>Credit Check Status old</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stage_Date__c</fullName>
        <label>Current Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Promise_Date_Inverter__c</fullName>
        <label>Customer Promise Date Inverter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Promise_Date_Mounting__c</fullName>
        <label>Customer Promise Date Mounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Promise_Date_PV__c</fullName>
        <label>Customer Promise Date PV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Inverter__c</fullName>
        <label>Customer Request Date Inverter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Mounting__c</fullName>
        <label>Customer Request Date Mounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_PV__c</fullName>
        <label>Customer Request Date PV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D4D_Category__c</fullName>
        <description>This field will contain the D4D Categories</description>
        <label>D4D Category</label>
        <picklist>
            <picklistValues>
                <fullName>Install_Awaiting City Approval on Design Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Awaiting City/municipality Inspection and Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Awaiting HOA Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Force Majeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Homeowner&apos;s Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Pending Installation Schedule  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Site Remodeling/Renovation/Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_System Installation in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Warranty Card Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Contract Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Awaiting Photos or SMS Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Permit Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install_Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Awaiting Final Job Card/Final Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Awaiting PTO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Awaiting REBATE PAPERWORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Awaiting Utility Final Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Homeowner&apos;s Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Inverter/Panel Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Contract Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Pending Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Service/Main Panel Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Site remodeling/renovation/repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_No Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Unpermitted Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect_Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Shipped_Contract Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Shipped_HO Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DP_Delivery_Receipt_Expired__c</fullName>
        <description>$Setup.Base_URL__c.Base_URL__c + &quot;servlet/servlet.FileDownload?file=01580000001jBab&quot;</description>
        <formula>IF ( NOT (ISBLANK ( Declaration_Prealable_Approved__c  ) ), NULL,

     IF (  Days_remaining_for_DP_to_Auto_approve__c  &lt;= 0,

     IMAGE(&quot;https://c.cs30.content.force.com/servlet/servlet.FileDownload?file=01580000001jBab&quot;, &quot;green&quot; ) ,

NULL

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DP Delivery Receipt Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Delivery_receipt__c</fullName>
        <description>This date is the date that the Déclaration préalable is lodged with the government.</description>
        <label>DP Delivery receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DP_receipt_date__c</fullName>
        <label>DP receipt date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Countersigned_Aging__c</fullName>
        <description>Case# 00624266 - FullyCS Milestone coloring - Arokia Nathan</description>
        <formula>IF(NOT(ISBLANK(Date_Countersigned__c)), TODAY() - Date_Countersigned__c, null)</formula>
        <label>Date Countersigned Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Countersigned_Custom__c</fullName>
        <formula>TEXT( MONTH(Date_Countersigned__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Date_Countersigned__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Date_Countersigned__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Countersigned Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Countersigned__c</fullName>
        <formula>IF( NOT(ISBLANK(Date_Countersigned_old__c  )) , Date_Countersigned_old__c,Quote__r.Lease_doc_Signed_Date__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Countersigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Countersigned_old__c</fullName>
        <label>Date Countersigned old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lease_Document_signed__c</fullName>
        <label>Date Lease Document signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tranche_1_Submitted__c</fullName>
        <description>Brings down the date on which the tranche batch was submitted for a response.</description>
        <formula>Tranche_1_Batch__r.Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date on which the batch was submitted.</inlineHelpText>
        <label>Date Tranche 1 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tranche_2_Submitted__c</fullName>
        <description>Brings down the date on which the tranche batch was submitted for a response.</description>
        <formula>Tranche_2_Batch__r.Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date on which the batch was submitted.</inlineHelpText>
        <label>Date Tranche 2 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tranche_3_Submitted__c</fullName>
        <formula>Tranche_3_Batch__r.Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Tranche 3 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_in_PTO_Letter__c</fullName>
        <description>Date in PTO Letter</description>
        <label>Date in PTO Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Commissioning__c</fullName>
        <label>Date of Commissioning</label>
        <type>Date</type>
    </fields>
</CustomObject>